--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "private": true,
   "scripts": {
-    "deploy": "yarn build && surge ./public --domain react-portfolio.mariannekelly.surge.sh",
+    "deploy": "yarn build && surge ./public --domain mariannekelly.com",
     "start": "webpack-dev-server",
     "prebuild": "rm -f public/index.html public/app-*.js public/vendor-*.js public/screen-*.css",
+    "postbuild": "cp public/index.html public/200.html",
     "build": "NODE_ENV=production webpack --progress"
   },
   "dependencies": {
