--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "headroom.js": "^0.9.3",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
     "nuka-carousel": "^2.0.4",
