--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "browser-sync": "^2.18.8",
+    "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^1.1.4",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
@@ -31,7 +31,7 @@
     "file-loader": "^0.11.1",
     "headroom.js": "^0.9.3",
     "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.5.2",
+    "node-sass": "^4.12.0",
     "nuka-carousel": "^2.0.4",
     "postcss-loader": "^1.3.3",
     "raw-loader": "^0.5.1",
@@ -45,9 +45,10 @@
     "style-loader": "^0.16.1",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
-    "surge": "^0.19.0",
+    "surge": "^0.21.3",
+    "ts-react-codepen-embed": "^0.4.0",
     "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2",
+    "webpack-dev-server": "^2.11.5",
     "webpack-merge": "^4.1.0",
     "whatwg-fetch": "^2.0.3"
   }
