--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^6.7.7",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.2",
     "babel-loader": "^6.4.1",
     "babel-polyfill": "^6.23.0",
@@ -18,15 +18,15 @@
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^1.1.4",
-    "css-loader": "^0.28.0",
+    "css-loader": "^3.2.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
     "eslint-config-standard-react": "^4.3.0",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^6.10.3",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-standard": "^3.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "headroom.js": "^0.9.3",
@@ -35,21 +35,22 @@
     "nuka-carousel": "^2.0.4",
     "postcss-loader": "^1.3.3",
     "raw-loader": "^0.5.1",
-    "react": "^15.5.4",
+    "react": "^15.6.2",
     "react-dom": "^15.5.4",
-    "react-hot-loader": "next",
+    "react-hot-loader": "^4.12.14",
     "react-pdf": "^1.6.1",
-    "react-router-dom": "^4.1.1",
-    "redbox-react": "^1.3.6",
+    "react-router-dom": "^4.3.1",
+    "react-transition-group": "^1.2.1",
+    "redbox-react": "^1.6.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
-    "stylelint": "^7.10.1",
+    "stylelint": "^11.0.0",
     "stylelint-config-standard": "^16.0.0",
     "surge": "^0.21.3",
     "ts-react-codepen-embed": "^0.4.0",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.11.5",
-    "webpack-merge": "^4.1.0",
+    "webpack-merge": "^4.2.2",
     "whatwg-fetch": "^2.0.3"
   }
 }
