--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^6.7.7",
+    "autotrack": "^2.4.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.2",
     "babel-loader": "^6.4.1",
